# ray-tracer

./: CMakeLists.txt  main.cpp
math/: CMakeLists.txt  algorithm.hpp  constants.hpp  geometric.hpp  ray.cpp  ray.hpp  real.cpp  real.hpp  vec3-t-geometric.hpp  vec3-t-geometric.inl  vec3-t.hpp  vec3-t.inl  vec3.hpp
objects/: CMakeLists.txt
objects/base/: hitable-interface.hpp  material-interface.hpp
objects/hitables/: CMakeLists.txt  hitable-list.cpp  hitable-list.hpp  moving-sphere.cpp  moving-sphere.hpp  sphere.cpp  sphere.hpp
objects/materials/: CMakeLists.txt  dielectric.cpp  dielectric.hpp  lambertian.cpp  lambertian.hpp  metal.cpp  metal.hpp
objects/primitives/: hit-record.hpp
render-application/: CMakeLists.txt  camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp
utility/: CMakeLists.txt  ppm-file-writer.cpp  ppm-file-writer.hpp  random.cpp  random.hpp
utility/threading/: CMakeLists.txt  pool-thread.cpp  pool-thread.hpp  semaphore.hpp  task.cpp  task.hpp  thread-pool.cpp  thread-pool.hpp
